refactor: 손익률 계산방식 변경