@@ -3,7 +3,6 @@ package lotto;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
@@ -14,6 +13,7 @@ public class LottoGamesTest {
     @DisplayName("로또 수익률 계산")
     public void returnRate() {
         LottoGames lottoGames = new LottoGames(List.of("1, 2, 3, 41, 42, 43"), "1, 2, 3, 4, 5, 6");
+        lottoGames.calculatePrizeCount();
         assertThat(lottoGames.calculateReturn()).isEqualTo(5);
     }
 
@@ -27,9 +27,9 @@ public class LottoGamesTest {
     @Test
     @DisplayName("상금별 당첨이 몇개가 있는지 확인")
     public void calculatePrizeCountTest() {
-        LottoGames lottoGames = new LottoGames(Arrays.asList("1, 2, 3, 41, 42, 43"), "1, 2, 3, 4, 5, 6");
+        LottoGames lottoGames = new LottoGames(List.of("1, 2, 3, 41, 42, 43"), "1, 2, 3, 4, 5, 6");
         lottoGames.calculatePrizeCount();
-        assertThat(lottoGames.getResult()).containsExactly(0, 0, 0, 1, 0, 0);
+        assertThat(lottoGames.getLottoResult()).containsExactly(0, 0, 0, 1, 0, 0, 0);
     }
 
 
